--- a/index.html
+++ b/index.html
@@ -22,11 +22,10 @@
             </h4>
 
             <label>Webcam</label>
-            <div id="camera"></div>
             <br><br>
             <div id="result"></div>
             <br><br>
-            <button onclick="take_snapshot();">Capture Image</button>
+            <button onclick="capture();">Capture Image</button>
             <br><br>
             <button onclick="check();" >Identify Image</button>
             <br><br>
